<resources>
    <string name="app_name">JustHobby</string>
    <string name="password">Пароль</string>
    <string name="forget">Забыли?</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="ready">Готово</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="or">или</string>
    <string name="email">E-mail</string>
    <string name="sign_in">Войти</string>
    <string name="cancel">Отмена</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="restore">Восстановить</string>
    <string name="go_to_search">Перейти к поиску</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="skip">Пропустить</string>
    <string name="begin">Начать</string>
    <string name="notifications">Уведомления</string>
    <string name="no_user_timetable">Нет расписания</string>
    <string name="no_events">Нет занятий</string>
    <string name="no_user_bookmarks">Нет закладок</string>
    <string name="no_user_courses">Нет курсов</string>
    <string name="smart_search">Гибкий поиск</string>
    <string name="my_courses">Мои курсы</string>
    <string name="many_courses">Множество курсов</string>
    <string name="settings">Настройки</string>
    <string name="user_account_settings">Учетная запись</string>
    <string name="feedback_settings">Обратная связь</string>
    <string name="about_app_settings">О приложении</string>
    <string name="exit_account_settings">Выйти из учетной записи</string>
    <string name="hide_show_password">Скрыть/Показать пароль</string>
    <string name="apply">Применить</string>
    <string name="mixed">Смешаный</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="sex">Пол</string>
    <string name="course">Курс</string>
    <string name="courses">Курсы</string>
    <string name="calendar">Календарь</string>
    <string name="bookmarks">Закладки</string>
    <string name="any">Любой</string>
    <string name="acceptance">Приём</string>
    <string name="coming">Идет</string>
    <string name="not_coming">Не идет</string>
    <string name="month">Месяц</string>
    <string name="lesson">Занятие</string>
    <string name="search">Поиск</string>
    <string name="price">Цена</string>
    <string name="cost">Стоимость</string>
    <string name="near">Рядом</string>
    <string name="reset">Сбросить</string>
    <string name="sorting">Сортировка</string>
    <string name="rating">Рейтинг</string>
    <string name="type_pay">Тип оплаты</string>
    <string name="add_in_bookmarks">Добавить в закладки</string>
    <string name="search_params">Параметры поиска</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="new_notification">Новые</string>
    <string name="old_notification">Просмотренные</string>
    <string name="clear_notifications">Очистить уведомления</string>
    <string name="back">Назад</string>
    <string name="add_in_my_courses">Добавить в мои курсы</string>
    <string name="remove_from_my_courses">Удалить из мои курсов</string>
    <string name="remove_from_my_courses_btn">Удалить курс</string>
    <string name="reception">Прием</string>
    <string name="timetable">Расписание</string>
    <string name="short_monday">ПН</string>
    <string name="short_tuesday">ВТ</string>
    <string name="short_wednesday">СР</string>
    <string name="short_thursday">ЧТ</string>
    <string name="short_friday">ПТ</string>
    <string name="short_saturday">СБ</string>
    <string name="short_sunday">ВС</string>
    <string name="groups">Группы</string>
    <string name="show_all">Показать все</string>
    <string name="new_review">Новый отзыв</string>
    <string name="general_info">Основная информация</string>
    <string name="new_review_hint">Расскажите, как вам курс</string>
    <string name="new_review_limit">Минимум 20 символов</string>
    <string name="leave_your_review">Оставьте свой отзыв</string>
    <string name="no_any_course_reviews">Нет отзывов</string>
    <string name="no_course_reviews">Оставьте первый отзыв</string>
    <string name="no_notifications">Нет уведомлений</string>
    <string name="no_search_result">Ничего не найдено</string>
    <string name="about_btn_ready">Нажимая «Готово» вы принимаете</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="in_change_day_no_events">В выбранный день занятия отстутствуют</string>
    <string name="before_event_min">До занятия меньше часа</string>
    <string name="before_end_of_event">До конца занятия %1$s</string>
    <string name="before_event_term0">До занятия %1$s часов</string>
    <string name="before_event_term1">До занятия %1$s час</string>
    <string name="before_event_term2to4">До занятия %1$s часа</string>
    <string name="before_event_term5toMoreAnd11to14">До занятия %1$s часов</string>
    <string name="count_reviews_term1">%1$s отзыв</string>
    <string name="count_reviews_term2to4">%1$s отзыва</string>
    <string name="count_reviews_term0andTerm5toMoreAnd11to14">%1$s отзывов</string>
    <string name="length_meters">%1$s м</string>
    <string name="category_title">Категория &#8220;%1$s&#8221;</string>
    <string name="about_recovery">
        Укажите E-mail, к которому привязан аккаунт. Мы пришлем на него\n письмо с инструкцией\n восстановления.
    </string>
    <string name="about_notification">
        Получайте уведедомления об\n изменении расписания, адреса,\n преподователя и др., а также\n напоминания о
        предстоящем\n занятии в группе
    </string>
    <string name="about_search">
        Имеется сортировка по\n местоположению, рейтингу и цене.\n Есть поиск курсов по ключевым\n словам или
        категориям. Вы можете\n выбрать дни для занятий\n удобные для вас
    </string>
    <string name="about_courses">
        Огромный каталог отражает все\n сферы дополнительного\n образования: наука, искусство,\n спорт, техническое
        творчество,\n иностранные языки и т.д.
    </string>
    <string name="about_add_your_courses">
        Если Вы представитель\n учреждения дополнительного\n образования и хотите добавить\n свои курсы, то вы можете сделать\n это на сайте\n http://justhobby.herokuapp.com
    </string>
    <string name="about_no_timeline_before_plus">
        Нажмите на
    </string>
    <string name="about_no_timeline_after_plus">
        на карточке группы
    </string>
    <string name="about_no_timeline_other">
        в курсе, чтобы добавить его к себе.\n
        Таким образом он добавиться в\n Ваше расписание, а также Вам\n будут приходить уведомления\n и напоминания о
        нем.
    </string>
    <string name="about_no_events">
        К сожалению, в этот день\n
        у Вас нет занятий.
    </string>
    <string name="about_no_bookmarks_before_bookmark">
        Нажмите на
    </string>
    <string name="about_no_bookmarks_after_bookmark">
        , чтобы добавить
    </string>
    <string name="about_no_bookmarks_other">
        курс в закладки. Таким образом вы\n можете легко найти его позже.
    </string>
    <string name="about_no_courses_before_plus">
        Нажмите на
    </string>
    <string name="about_no_courses_after_plus">
        на карточке группы
    </string>
    <string name="about_no_courses_other">
        в курсе, чтобы добавить его к себе.\n
        Таким образом он добавиться в\n Ваше расписание, а также Вам\n будут приходить уведомления\n
        и напоминания о нем.
    </string>
    <string name="about_no_notifications">Добавьте курс к себе и получайте\n
        уведомления о изменении его\n расписания, а также напоминания о\n предстоящих занятиях или их\n отмене.
    </string>
    <string name="about_registry_start">Загрузите фотографию профиля, а\n также укажите свое имя и\n фамилию, они будут показаны при\n оставлении отзыва
    </string>
    <string name="about_no_search_results">Совсем ничего. Попробуйте\n изменить запрос.</string>
    <string name="filter">Фильтры</string>
    <string name="admin_panel">Админ-панель</string>
    <string name="categories">Категорий</string>
    <string name="subcategories">Подкатегорий</string>
    <string name="users">Пользователей</string>
    <string name="companies">Компаний</string>
    <string name="count_courses">Курсов</string>
    <string name="count_groups">Групп</string>
    <string name="reviews">Отзывов</string>
    <string name="create_company">Создать компанию</string>
    <string name="create">Создание</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="contract_number_hint">Номер договора</string>
    <string name="date_start_hint">Дата заключения</string>
    <string name="date_end_hint">Дата истичения</string>
    <string name="company_label">Название</string>
    <string name="telephone">Телефон</string>
    <string name="address">Адрес</string>
    <string name="site">Сайт</string>
    <string name="company_visibility">Видимость</string>
    <string name="about_company_hint">Расскажите об этой компании</string>
    <string name="change_contract">Изменить договор</string>
    <string name="edit_courses">Редактировать курсы</string>
    <string name="course_label">Название</string>
    <string name="change_category">Изменить категорию</string>
    <string name="edit">Редактирование</string>
    <string name="edit_groups">Редактировать группы</string>
    <string name="label">Название</string>
    <string name="about_group_hint">Расскажите об этой группе</string>
    <string name="new_group_limit">Минимум 45 символов</string>
    <string name="tutor">Учитель</string>
    <string name="change_type_pay">Изменить тип оплаты</string>
    <string name="sum_pay">Сумма оплаты</string>
    <string name="change_type_sex">Изменить пол</string>
    <string name="min_age">Минимальный возраст</string>
    <string name="max_age">Максимальный возраст</string>
    <string name="change_permanent_timetable">Изменить постоянное расписание</string>
    <string name="change_not_permanent_timetable">Изменить расписание единоразово</string>
    <string name="card_count_courses">%1$s курсов</string>
    <string name="card_count_groups">%1$s групп</string>
    <string name="card_count_reviews">%1$s отзывов</string>
    <string name="change_password">Сменить пароль</string>
    <string name="home_address">Адрес дома</string>
    <string name="about_home_address">Адрес используется для отображения рекомендаций «Рядом с вами», а также для
        указания расстояния до кружка
    </string>
    <string name="user_location">Использовать местоположение</string>
    <string name="vibration">Вибрация</string>
    <string name="not_disturb">Не беспокоить</string>
    <string name="notify_for">Уведомлять за</string>
    <string name="notify_from_groups">Уведомления от групп</string>
    <string name="about_app">О приложении</string>
    <string name="version_app">Версия %1$s</string>
    <string name="confident_politic">Политика конфиденциальности</string>
    <string name="licenses">Лицензии</string>
    <string name="teacher">Педагог:</string>
    <string name="payment_one">%1$sР / занятие</string>
    <string name="payment_month">%1$sР / месяц</string>
    <string name="payment_course">%1$sР / курс</string>
    <string name="age">Возраст</string>
    <string name="agree">Понятно</string>
    <string name="error_subalert">(закройте окно нажав на кнопку ниже)</string>
    <string name="minimum">минимум</string>
    <string name="empty_field">Пустое поле</string>
    <string name="min_20_symbols">Минимум 20 символов</string>
    <string name="min_5_symbols">Минимум 5 символов</string>
    <string name="min_255_symbols">Максимум 255 символов</string>
    <string name="min_500_symbols">Максимум 500 символов</string>
    <string name="min_6_symbols">Минимум 6 символов</string>
</resources>