<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:paddingBottom="8dp"
                 android:background="@drawable/appbar_bg"
                 android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="@string/notifications"
                  android:textColor="@color/whiteTop"
                  style="@style/Body1.Medium.UpperCase"/>
    </FrameLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="-8.5dp"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView android:layout_width="129dp"
                   android:layout_height="129dp"
                   app:srcCompat="@drawable/big_ic_notification"
                   android:layout_gravity="center"
                   tools:ignore="ContentDescription"/>
        <TextView style="@style/H2.Medium"
                  android:paddingTop="16dp"
                  android:paddingBottom="8dp"
                  android:textAlignment="center"
                  android:textColor="@color/grafitText"
                  android:text="@string/no_notifications"/>
        <TextView style="@style/Body2"
                  android:paddingBottom="8dp"
                  android:textAlignment="center"
                  android:textColor="@color/grafitText"
                  android:text="@string/about_no_notifications"/>
        <Button style="@style/ButtonGreen"
                android:id="@+id/notificationsClearBtn"
                android:text="@string/go_to_search"/>
    </LinearLayout>
</LinearLayout>