<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:background="@color/colorPrimary"
                                                 android:paddingTop="15dp"
                                                 android:paddingBottom="15dp">
        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:id="@+id/reviewNewBtnBack"
                     android:tint="@color/whiteTop"
                     android:paddingStart="16dp"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/courses"
                     app:srcCompat="@drawable/ic_arrow_back_24dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:ignore="RtlSymmetry"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingStart="0dp"
                  android:paddingEnd="40dp"
                  android:text="@string/about_app"
                  app:layout_constraintLeft_toRightOf="@+id/reviewNewBtnBack"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  style="@style/H2.Medium.UpperCase"/>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="60dp"
                  android:layout_marginBottom="60dp"
                  android:orientation="vertical">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:background="@drawable/ic_settings_logo"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textColor="@color/gray"
                  android:text="@string/version_app"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/grafitText"
              android:text="@string/confident_politic"
              android:id="@+id/confidentPoliticBtn"
              android:paddingTop="15dp"
              android:paddingBottom="15dp"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              style="@style/Body1"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/grafitText"
              android:text="@string/user_agreement"
              android:id="@+id/userAgreementBtn"
              android:paddingTop="15dp"
              android:paddingBottom="15dp"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              style="@style/Body1"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/grafitText"
              android:text="@string/licenses"
              android:id="@+id/licensesBtn"
              android:paddingTop="15dp"
              android:paddingBottom="15dp"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              style="@style/Body1"/>
</LinearLayout>