<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:fillViewport="true">
    <LinearLayout android:id="@+id/auth"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:clickable="true"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
                  tools:context=".start.recovery.RecoveryActivity">
        <ImageView android:layout_marginTop="44dp"
                   android:layout_marginBottom="40dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/logo"
                   tools:ignore="ContentDescription"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView style="@style/Label"
                          android:text="@string/email"/>
                <EditText android:id="@+id/authLogin"
                          style="@style/EditText"
                          android:autofillHints="email"
                          android:inputType="textEmailAddress"
                          tools:ignore="LabelFor,UnusedAttribute"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView style="@style/Label"
                          android:text="@string/password"/>
                <FrameLayout android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                    <EditText android:id="@+id/authPassword"
                              style="@style/EditText"
                              android:paddingEnd="64dp"
                              android:autofillHints="email"
                              android:inputType="textPassword"
                              tools:ignore="LabelFor,RtlSymmetry,UnusedAttribute"/>
                    <ImageButton android:id="@+id/authPasswordVisible"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="end|center_vertical"
                                 android:paddingTop="2.5dp"
                                 android:paddingBottom="7.5dp"
                                 android:paddingEnd="28dp"
                                 app:srcCompat="@drawable/ic_visibility_24dp"
                                 android:background="@android:color/transparent"
                                 tools:ignore="RtlSymmetry"
                                 android:contentDescription="@string/hide_show_password"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView style="@style/Caption1"
                          android:id="@+id/authForget"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingTop="0.5dp"
                          android:paddingBottom="5.5dp"
                          android:paddingEnd="16dp"
                          android:textColor="@color/whiteTopUnder"
                          android:text="@string/forget"
                          android:layout_gravity="end"
                          tools:ignore="RtlSymmetry"/>
                <Button android:id="@+id/authEnterButton"
                        style="@style/ButtonWhite"
                        android:text="@string/sign_in"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginTop="8dp"
                      android:orientation="vertical"
                      android:gravity="center_horizontal|bottom">
            <TextView android:id="@+id/authRegistry"
                      style="@style/BtnBottomFirstScreens"
                      android:text="@string/sign_up"
                      android:shadowColor="#66000000"
                      android:shadowRadius="4"
                      android:shadowDy="2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>