<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whiteTop"
              android:orientation="vertical">
    <FrameLayout android:orientation="horizontal"
                 android:id="@+id/homeMainGeneral"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingBottom="20dp">
        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/homeCourses"
                     app:srcCompat="@drawable/ic_assignment_24dp"
                     android:tint="@color/colorPrimary"
                     android:paddingStart="16dp"
                     android:layout_gravity="start|center_vertical"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/courses"
                     tools:ignore="RtlSymmetry"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:orientation="horizontal">
            <ImageButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:id="@+id/homeCalendar"
                         app:srcCompat="@drawable/ic_today_24dp"
                         android:tint="@color/colorPrimary"
                         android:paddingEnd="8dp"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/calendar"
                         tools:ignore="RtlSymmetry"/>
            <TextView style="@style/Body1.Medium"
                      android:id="@+id/homeCalendarText"
                      android:textColor="@color/grafitText"
                      android:text=""/>
        </LinearLayout>
        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center_vertical"
                     app:srcCompat="@drawable/ic_bookmark_24dp"
                     android:tint="@color/colorPrimary"
                     android:id="@+id/homeBookmarks"
                     android:paddingEnd="16dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/bookmarks"
                     tools:ignore="RtlSymmetry"/>
    </FrameLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/big_ic_calendar"
                   android:layout_gravity="center"
                   tools:ignore="ContentDescription"/>
        <TextView style="@style/H2.Medium"
                  android:paddingTop="16dp"
                  android:paddingBottom="8dp"
                  android:textAlignment="center"
                  android:textColor="@color/grafitText"
                  android:text="@string/no_user_timetable"/>
        <TextView style="@style/Body2"
                  android:paddingBottom="8dp"
                  android:textAlignment="center"
                  android:textColor="@color/grafitText"
                  android:text="@string/about_no_timetable"/>
        <Button style="@style/ButtonGreen"
                android:id="@+id/homeClearBtn"
                android:text="@string/go_to_search"/>
    </LinearLayout>
</LinearLayout>